syntax = "proto3";

package message;

// Run protoc --gofast_out=. message.proto to generate message.pb.go

// Message models a single message that is supposed to get exchanged by the gossip network
message Message {
    uint32 ChannelID = 1;
    bytes EventID = 2;
    bytes OriginID = 3;
    repeated bytes TargetIDs = 4;
    bytes Payload = 5;
}

